qlcchain/ptm update version to v1.0.0
Signed-off-by: coolc4 <19464572@qq.com>